fix highlight in follower and opening file